CCMSPUI-379 Added to open-api-specification.yml
