# data-api/open-api-specification.yml
@@ -1068,6 +1068,67 @@ paths:
           description: 'Forbidden'
         '500':
           description: 'Internal server error'
+  /clients:
+    get:
+      tags:
+        - clients
+      summary: 'Get Clients'
+      operationId: 'getClients'
+      x-spring-paginated: true
+      parameters:
+        - name: 'first-name'
+          in: 'query'
+          schema:
+            type: 'string'
+            example: 'john'
+        - name: 'surname'
+          in: 'query'
+          schema:
+            type: 'string'
+            example: 'smith'
+        - name: 'date-of-birth'
+          in: 'query'
+          schema:
+            type: 'string'
+            example: "2017-01-01"
+            format: date
+        - name: 'gender'
+          in: 'query'
+          schema:
+            type: 'string'
+            example: 'Male'
+        - name: 'case-reference-number'
+          in: 'query'
+          schema:
+            type: 'string'
+            example: '1234567890'
+        - name: 'home-office-reference'
+          in: 'query'
+          schema:
+            type: 'string'
+            example: '1234567890'
+        - name: 'national-insurance-number'
+          in: 'query'
+          schema:
+            type: 'string'
+            example: 'AB123456C'
+      responses:
+        '200':
+          description: 'Successful operation'
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/clientDetails"
+        '400':
+          description: 'Bad request'
+        '401':
+          description: 'Unauthorized'
+        '403':
+          description: 'Forbidden'
+        '404':
+          description: 'Not found'
+        '500':
+          description: 'Internal server error'
   /clients/status/{transaction-request-id}:
     get:
       tags:
@@ -1501,6 +1562,36 @@ components:
         level_of_service_code:
           type: 'string'
         default_code:
+          type: 'string'
+    clientDetails:
+      allOf:
+        - $ref: "#/components/schemas/page"
+      type: 'object'
+      properties:
+        content:
+          type: 'array'
+          default: [ ]
+          items:
+            $ref: "#/components/schemas/clientSummary"
+    clientSummary:
+      allOf:
+        - $ref: '#/components/schemas/baseClient'
+      type: 'object'
+      properties:
+        surname_at_birth:
+          type: 'string'
+        full_name:
+          type: 'string'
+        date_of_birth:
+          type: 'string'
+          format: 'date'
+        gender:
+          type: 'string'
+        postal_code:
+          type: 'string'
+        home_office_reference:
+          type: 'string'
+        national_insurance_number:
           type: 'string'
     baseClient:
       type: 'object'
